metadata/force-app/main/default/objects/CustomName_QBiwM__c/CustomName_QBiwM__c.object-meta.xml
<CustomObject>
    <description>Description_fmKgZ</description>
    <label>CustomLabel_lFEDj</label>
    <nameField>
        <label>CustomLabel_lFEDj</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_lFEDjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>