metadata/force-app/main/default/objects/CustomName_QBiwM__c/fields/CustomField_GASFg__c.field-meta.xml
<CustomField>
    <fullName>CustomField_GASFg__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYzCIt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>