metadata/force-app/main/default/objects/CustomName_QBiwM__c/fields/CustomField_QrFsn__c.field-meta.xml
<CustomField>
    <fullName>CustomField_QrFsn__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldBlyTw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>